--- a/ScreenMusic.Web/wwwroot/index.html
+++ b/ScreenMusic.Web/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link href="ScreenMusic.Web.styles.css" rel="stylesheet" />
 </head>
 
